[B]Retrospect v5.7.0 - Changelog - 2023-11-18[/B]

This update includes two major fixes for both TV4 Play (Sweden) en NPO Start (Netherlands). Both channels had their API renewed and needed a complete rewrite.

[B]Framework related[/B]
* Added: Web-based dialog to insert values.

[B]GUI/Settings/Language related[/B]
* Updated: Some translations.

[B]Channel related[/B]
* Fixed: TV4 Play major update of API (Fixes #1714).
* Fixed: NPO Start major update of API (Fixes #1730).